--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="financial-sector">I work in the financial sector:</label>
-            <input type="checkbox" id="financial-sector">
+            <label for="financialSector">I work in the financial sector:</label>
+            <input type="checkbox" id="financialSector">
         </div>
     </form>
     <table>
         <thead>
             <tr>
-                <th>Module</th>
+                <th>Item</th>
                 <th>Cost</th>
                 <th>Select</th>
             </tr>
@@ -40,7 +40,7 @@
         <tbody id="module-list">
         </tbody>
     </table>
-    <p class="total-course-fees">Total Course Fees: $<span id="total-fee"></span></p>
+    <p class="total-course-fees">Total Course Fees: $<span id="totalCost"></span></p>
     <script src="scripts.js"></script>
 </body>
 </html>
