--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Course Fee Calculator</title>
 </head>
 <body>
+    <img src= "logo_Ma.png" alt="School Logo" id="school-logo">
     <h2>Master's in Digital Management: Programme Fee Calculator</h2>
     <form id="fee-calculator">
         <div class="form-group">
